--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="keywords" content="chacha &amp; seven &amp; Chacha &amp; Seven By Chacha &amp; seven by chacha &amp; seven by Chacha &amp; Seven collections &amp; seven collections &amp; Seven collections &amp; Seven collections &amp; Chacha collections &amp;  Chacha Collections">
+    <!-- <meta name="keywords" content="cutter &amp; buck, cutter &amp; buck clothing, cutter and buck, Cutter &amp; Buck apparel, Cutter &amp; Buck Big &amp; Tall"> -->
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -24,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Seven- Online Clothing Store</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
